[package]
name = "problem-solving-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "week_1_a"
path = "src/week_1/A/main.rs"

[[bin]]
name = "week_1_b"
path = "src/week_1/B/main.rs"

[[bin]]
name = "week_1_c"
path = "src/week_1/C/main.rs"

[[bin]]
name = "week_1_d"
path = "src/week_1/D/main.rs"

[[bin]]
name = "week_1_e"
path = "src/week_1/E/main.rs"
