[package]
name = "problem-solving-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "week_1_a"
path = "src/week_1/A/main.rs"

[[bin]]
name = "week_1_b"
path = "src/week_1/B/main.rs"

[[bin]]
name = "week_1_c"
path = "src/week_1/C/main.rs"

[[bin]]
name = "week_1_d"
path = "src/week_1/D/main.rs"

[[bin]]
name = "week_1_e"
path = "src/week_1/E/main.rs"

[[bin]]
name = "week_1_f"
path = "src/week_1/F/main.rs"

[[bin]]
name = "week_1_g"
path = "src/week_1/G/main.rs"

[[bin]]
name = "week_1_h"
path = "src/week_1/H/main.rs"

[[bin]]
name = "week_1_i"
path = "src/week_1/I/main.rs"


[[bin]]
name = "week_1_j"
path = "src/week_1/J/main.rs"

[[bin]]
name = "week_1_k"
path = "src/week_1/K/main.rs"

[[bin]]
name = "week_1_l"
path = "src/week_1/L/main.rs"

[[bin]]
name = "week_2_a"
path = "src/week_2/A/main.rs"

[[bin]]
name = "week_2_b"
path = "src/week_2/B/main.rs"

[[bin]]
name = "week_2_c"
path = "src/week_2/C/main.rs"